<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.tnsilver.contacts</groupId>
	<artifactId>mongo-contacts</artifactId>
	<version>1.0.0-RELEASE</version>
	<name>springboot-rest-mongo-contacts</name>
	<description>SpringBoot RESTful with MongoDB</description>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<!--version>2.5.3</version-->
		<version>2.7.1</version>
		<relativePath />
	</parent>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>18</java.version>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<maven.compiler.version>3.10.1</maven.compiler.version>
		<org.apache.poi.version>5.0.0</org.apache.poi.version>
		<itextpdf.version>5.5.13.2</itextpdf.version>
		<commons-io.version>2.9.0</commons-io.version>
		<fongo.version>2.1.1</fongo.version>
		<hibernate.validator.version>7.0.1.Final</hibernate.validator.version>
		<javax.servlet.jsp-api.version>2.3.3</javax.servlet.jsp-api.version>
		<maven.test.failure.ignore>true</maven.test.failure.ignore>
		<maven.surefire.plugin.version>3.0.0-M6</maven.surefire.plugin.version>
		<maven.failsafe.plugin.version>3.0.0-M6</maven.failsafe.plugin.version>
		<maven.site.plugin.version>3.9.1</maven.site.plugin.version>
		<maven.maven.pmd.plugin.version>3.11.0</maven.maven.pmd.plugin.version>
		<maven.jar.plugin.version>3.2.0</maven.jar.plugin.version>
		<jacoco.maven.plugin.version>0.8.8</jacoco.maven.plugin.version>
		<jacoco.haltOnFailure>false</jacoco.haltOnFailure>
		<spring.profiles.active>dev</spring.profiles.active>
		<spring.mongodb.embedded.version>3.4.6</spring.mongodb.embedded.version>
		<spring.data.mongodb.database>contacts</spring.data.mongodb.database>
		<spring.data.mongodb.username>user</spring.data.mongodb.username>
		<spring.data.mongodb.password>password</spring.data.mongodb.password>
		<application.it.test.timeout>10</application.it.test.timeout>
		<application.it.test.timeunit>MINUTES</application.it.test.timeunit>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-aop</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-taglibs</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-rest</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-mongodb</artifactId>
		</dependency>

		<dependency>
			<groupId>de.flapdoodle.embed</groupId>
			<artifactId>de.flapdoodle.embed.mongo</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-thymeleaf</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.apache.tomcat.embed</groupId>
			<artifactId>tomcat-embed-jasper</artifactId>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>jstl</artifactId>
		</dependency>

		<dependency>
			<groupId>javax.servlet.jsp</groupId>
			<artifactId>javax.servlet.jsp-api</artifactId>
			<version>${javax.servlet.jsp-api.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
		</dependency>

		<dependency>
			<groupId>com.itextpdf</groupId>
			<artifactId>itextpdf</artifactId>
			<version>${itextpdf.version}</version>
		</dependency>

		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi</artifactId>
			<version>${org.apache.poi.version}</version>
		</dependency>

		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
		</dependency>

		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>${commons-io.version}</version>
		</dependency>

		<dependency>
			<groupId>javax.validation</groupId>
			<artifactId>validation-api</artifactId>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
		</dependency>

		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
		</dependency>

		<!-- required for RestTemplate PATCH -->
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
		</dependency>

		<!-- TEST -->

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-params</artifactId>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
				<excludes>
					<exclude>static/images/**/*.*</exclude>
				</excludes>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>false</filtering>
				<includes>
					<include>static/images/**/*.*</include>
				</includes>
			</resource>
			<resource>
				<directory>src/test/resources</directory>
				<targetPath>${project.build.directory}/test-classes</targetPath>
				<filtering>true</filtering>
				<includes>
					<include>**/*.properties</include>
				</includes>
			</resource>
		</resources>

		<pluginManagement>
			<plugins>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>${maven.compiler.version}</version>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>${maven.jar.plugin.version}</version>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-failsafe-plugin</artifactId>
					<version>${maven.failsafe.plugin.version}</version>
				</plugin>

				<plugin>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-maven-plugin</artifactId>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>${maven.surefire.plugin.version}</version>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-report-plugin</artifactId>
					<version>${maven.surefire.plugin.version}</version>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-pmd-plugin</artifactId>
					<version>${maven.pmd.plugin.version}</version>
				</plugin>

				<plugin>
					<groupId>org.jacoco</groupId>
					<artifactId>jacoco-maven-plugin</artifactId>
					<version>${jacoco.maven.plugin.version}</version>
				</plugin>

			</plugins>
		</pluginManagement>

		<plugins>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
						<configuration>
							<failIfNoSpecifiedTests>false</failIfNoSpecifiedTests>
							<excludes>
								<exclude>**/Test</exclude>
								<exclude>**/Application*</exclude>
								<exclude>**/*Config</exclude>
								<exclude>**/Base*</exclude>
							</excludes>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<executions>
					<execution>
						<id>repackage</id>
						<goals>
							<goal>repackage</goal>
						</goals>
					</execution>
				</executions>
				<!-- <configuration> <classifier>test</classifier> <profiles>test</profiles>
					<mainClass>com.tnsilver.contacts.ApplicationIT</mainClass> <jvmArguments>${argLine}</jvmArguments>
					</configuration> -->
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<testFailureIgnore>true</testFailureIgnore>
					<excludes>
						<exclude>**/Application*</exclude>
						<exclude>**/*Config</exclude>
						<exclude>**/*IT</exclude>
						<exclude>**/Base*</exclude>
					</excludes>
					<!-- do not let this line break -->
					<argLine>@{argLine} --add-opens java.base/java.time=ALL-UNNAMED -Duser.timezone=UTC</argLine>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-report-plugin</artifactId>
				<configuration>
					<showSuccess>true</showSuccess>
				</configuration>
				<executions>
					<execution>
						<id>generate-reports</id>
						<phase>test</phase>
						<goals>
							<goal>report-only</goal>
						</goals>
					</execution>
					<execution>
						<id>generate-it-reports</id>
						<phase>integration-test</phase>
						<goals>
							<goal>failsafe-report-only</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>${maven.site.plugin.version}</version>
				<executions>
					<execution>
						<id>generate-test-reports-styles</id>
						<phase>test</phase>
						<goals>
							<goal>site</goal>
						</goals>
						<configuration>
							<generateReports>false</generateReports>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>coverage-report</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
						<configuration>
							<excludes>
								<exclude>**/*Test.*</exclude>
								<exclude>**/*Config.*</exclude>
								<exclude>**/*IT.*</exclude>
								<exclude>**/Application*.*</exclude>
								<exclude>**/Base*</exclude>
							</excludes>
						</configuration>
					</execution>
					<execution>
						<id>jacoco-check</id>
						<phase>test</phase>
						<goals>
							<goal>check</goal>
						</goals>
						<configuration>
							<excludes>
								<exclude>**/*Test.*</exclude>
								<exclude>**/*IT.*</exclude>
								<exclude>**/*Config.*</exclude>
								<exclude>**/Application*.*</exclude>
								<exclude>**/Base*</exclude>
							</excludes>
							<rules>
								<rule>
									<element>BUNDLE</element>
									<limits>
										<limit>
											<counter>INSTRUCTION</counter>
											<value>COVEREDRATIO</value>
											<minimum>0.60</minimum>
										</limit>
										<limit>
											<counter>CLASS</counter>
											<value>MISSEDCOUNT</value>
											<maximum>0</maximum>
										</limit>
									</limits>
								</rule>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>

		</plugins>
	</build>

	<profiles>

		<profile>
			<!-- live mongo on port 27017 -->
			<id>prod</id>
			<properties>
				<spring.profiles.active>prod</spring.profiles.active>
				<spring.data.mongodb.host>localhost</spring.data.mongodb.host>
				<spring.data.mongodb.port>27017</spring.data.mongodb.port>
				<spring.autoconfigure.exclude>org.springframework.boot.autoconfigure.mongo.embedded.EmbeddedMongoAutoConfiguration</spring.autoconfigure.exclude>
			</properties>
		</profile>

		<profile>
			<!-- embedded mongo -->
			<id>dev</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<properties>
				<spring.profiles.active>dev</spring.profiles.active>
				<spring.mongodb.embedded.version>3.4.6</spring.mongodb.embedded.version>
				<spring.data.mongodb.host>localhost</spring.data.mongodb.host>
				<spring.data.mongodb.port>28018</spring.data.mongodb.port>
				<spring.autoconfigure.exclude></spring.autoconfigure.exclude>
				<application.it.test.timeout>10</application.it.test.timeout>
				<application.it.test.timeunit>MINUTES</application.it.test.timeunit>
			</properties>
		</profile>

		<profile>
			<!-- embedded mongo -->
			<id>test</id>
			<properties>
				<spring.profiles.active>test</spring.profiles.active>
				<spring.mongodb.embedded.version>3.4.6</spring.mongodb.embedded.version>
				<spring.data.mongodb.host>localhost</spring.data.mongodb.host>
				<spring.data.mongodb.port>28018</spring.data.mongodb.port>
				<spring.autoconfigure.exclude></spring.autoconfigure.exclude>
				<application.it.test.timeout>5</application.it.test.timeout>
				<application.it.test.timeunit>MINUTES</application.it.test.timeunit>
				<spring.mongodb.embedded.version></spring.mongodb.embedded.version>
			</properties>
		</profile>

	</profiles>
</project>